[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliefgrid"
version = "1.0.0-rc1"
description = "Autonomous Multi-Agent Crisis Platform Engine backed by CockroachDB Serverless Vector Memory and AWS Bedrock"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
authors = [
  { name = "Ma'ajo Lawasanjo", email = "maajolawasanjo@gmail.com" }
]
keywords = [
  "disaster-response",
  "multi-agent",
  "cockroachdb",
  "vector-memory",
  "aws-bedrock",
  "fastapi"
]

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic[email]>=2.6.0",
  "pydantic-settings>=2.1.0",
  "sqlmodel>=0.0.14",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy-cockroachdb>=2.0.4",
  "pgvector>=0.2.4",
  "boto3>=1.34.0",
  "slowapi>=0.1.9",
  "tenacity>=8.2.3",
  "httpx>=0.26.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "argon2-cffi>=23.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
